--- a/src/components/searchInput/searchInput.css
+++ b/src/components/searchInput/searchInput.css
@@ -21,3 +21,36 @@
 .searchInputWrapper input:focus {
   outline: none;
 }
+
+.searchInputWrapper .suggestionsList {
+  max-height: 300px;
+  overflow: auto;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: absolute;
+  border: 1px solid #ccc;
+}
+
+.searchInputWrapper .suggestionsList li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 8px 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ccc;
+}
+
+.searchInputWrapper .suggestionsList li:last-child {
+  border-bottom: none;
+}
+
+.searchInputWrapper .suggestionsList li:hover {
+  background-color: #ccc;
+  color: #000;
+}
+
+.searchInputWrapper .suggestionsList li img {
+  width: 30px;
+  height: 30px;
+}
