--- a/src/components/searchInput/searchInput.css
+++ b/src/components/searchInput/searchInput.css
@@ -1,13 +1,9 @@
-.searchInputWrapper {
-}
-
 .searchInputWrapper .inner {
   border: 1px solid #ccc;
   border-radius: 20px;
-}
-
-.searchInputWrapper .inputContainer {
   width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .searchInputWrapper input {
@@ -48,11 +44,6 @@
 .searchInputWrapper .suggestionsList li:hover {
   background-color: #ccc;
   color: #000;
-}
-
-.searchInputWrapper .suggestionsList li img {
-  width: 30px;
-  height: 30px;
 }
 
 .searchInputWrapper .suggestionsList li:empty {
