SearchInput: Add a delete/remove button to all the selected options

--- a/src/components/searchInput/searchInput.css
+++ b/src/components/searchInput/searchInput.css
@@ -49,3 +49,8 @@
 .searchInputWrapper .suggestionsList li:empty {
   display: none;
 }
+
+.searchInputWrapper .closeBtn {
+  padding: 0 10px;
+  cursor: pointer;
+}
