On up or down arrow key presses, highlight the dropdown option item

--- a/src/components/searchInput/searchInput.css
+++ b/src/components/searchInput/searchInput.css
@@ -41,7 +41,9 @@
   border-bottom: none;
 }
 
-.searchInputWrapper .suggestionsList li:hover {
+.searchInputWrapper .suggestionsList li:hover,
+.searchInputWrapper .suggestionsList li:focus,
+.searchInputWrapper .suggestionsList li.active {
   background-color: #ccc;
   color: #000;
 }
